<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap That</string>
    <string name="start_tap_out">Tap Out!</string>
    <string name="action_settings">Settings</string>
    <string name="current_time">Not Avail</string>
    <string name="best_time_1">0.0</string>
    <string name="best_time_2">0.0</string>
    <string name="best_time_3">0.0</string>
    <string name="best_time_4">0.0</string>
    <string name="best_time_5">0.0</string>
    <string name="best_time_6">0.0</string>
    <string name="retry_button">Retry?</string>
    <string name="top_scores">High Scores</string>
    <string name="options_button">Options</string>
    <string name="menu_option">Options</string>
    <string name="splash_screen">Loading Game</string>
    <string name="splash_screen_description">Loading Image</string>
    <string name="start_time_crunch">Time Crunch</string>
    <integer name="google_play_services_version">0</integer>

</resources>
